Fixed missing border color for active button

--- a/gtk/src/gtk-3.0/_drawing.scss
+++ b/gtk/src/gtk-3.0/_drawing.scss
@@ -284,10 +284,10 @@
     }
 
     background-color: $_bg;
+    border-color: $_bg;
 
     @if $flat == false {
       box-shadow: inset 0 1px 1px 0px rgba(0, 0, 0, if($c==$headerbar_bg_color, .15, 0.05));
-      border-color: $_border;
       border-top-color: $_border_top_color;
     }
   }
